--- a/IcyNote/app/src/main/res/layout/content_picture_editor.xml
+++ b/IcyNote/app/src/main/res/layout/content_picture_editor.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_picture_editor"
     android:layout_width="match_parent"
@@ -9,59 +8,50 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="icynote.plugins.PictureEditor"
-    tools:showIn="@layout/activity_picture_editor">
+    tools:context="icynote.plugins.PictureEditor">
+    <!--
 
+        <ImageView
+            android:id="@+id/preview_image"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="center"/>
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scaleType="center"/>
+        <Button
+            android:text="Rotate Left"
+            android:onClick="rotateLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="44dp"
+            android:layout_marginStart="44dp"
+            android:id="@+id/rotate_left"
+            android:layout_alignBaseline="@+id/rotate_right"
+            android:layout_alignBottom="@+id/rotate_right"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-    <Button
-        android:text="Rotate Left"
-        android:onClick="rotateLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="44dp"
-        android:layout_marginStart="44dp"
-        android:id="@+id/rotate_left"
-        android:layout_alignBaseline="@+id/rotate_right"
-        android:layout_alignBottom="@+id/rotate_right"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <Button
+            android:text="Rotate Right"
+            android:onClick="rotateRight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rotate_right"
+            android:layout_marginLeft="54dp"
+            android:layout_marginStart="54dp"
+            android:layout_marginBottom="99dp"
+            android:layout_alignParentBottom="true"
+            android:layout_toRightOf="@+id/rotate_left"
+            android:layout_toEndOf="@+id/rotate_left" />
 
-    <Button
-        android:text="Rotate Right"
-        android:onClick="rotateRight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rotate_right"
-        android:layout_marginLeft="54dp"
-        android:layout_marginStart="54dp"
-        android:layout_marginBottom="99dp"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/rotate_left"
-        android:layout_toEndOf="@+id/rotate_left" />
-
-    <Button
-        android:text="OK"
-        android:onClick="validate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rotate_left"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:id="@+id/validate" />
-
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/rotate_left"
-        android:layout_toEndOf="@+id/rotate_left"
-        android:id="@+id/textView3" />
+        <Button
+            android:text="OK"
+            android:onClick="validate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rotate_left"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:id="@+id/validate" />
+    -->
 </RelativeLayout>
+
