--- a/IcyNote/app/src/main/res/layout/activity_picture_editor.xml
+++ b/IcyNote/app/src/main/res/layout/activity_picture_editor.xml
@@ -15,42 +15,82 @@
         android:id="@+id/preview_image"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:contentDescription="@string/pic_edit_preview"
         android:scaleType="center"/>
 
     <Button
-        android:text="Rotate Left"
-        android:onClick="rotateLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="44dp"
-        android:layout_marginStart="44dp"
-        android:id="@+id/rotate_left"
-        android:layout_alignBaseline="@+id/rotate_right"
-        android:layout_alignBottom="@+id/rotate_right"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:text="Rotate Right"
-        android:onClick="rotateRight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rotate_right"
-        android:layout_marginLeft="54dp"
-        android:layout_marginStart="54dp"
-        android:layout_marginBottom="99dp"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/rotate_left"
-        android:layout_toEndOf="@+id/rotate_left" />
-
-    <Button
-        android:text="OK"
         android:onClick="validate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rotate_left"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:id="@+id/validate" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/editor_margin"
+        android:id="@+id/validate"
+        android:alpha="0"/>
+
+    <ImageView
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/editor_margin"
+        android:contentDescription="@string/pic_edit_done"
+        android:src="@drawable/pic_edit_done"
+        android:alpha="0.5"/>
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:contentDescription="@string/pic_edit_rotate_left"
+        android:src="@drawable/pic_edit_rotate_counterclock"
+        android:alpha="0.5"
+        android:id="@+id/imageView"
+        android:layout_marginRight="@dimen/editor_margin"
+        android:layout_marginEnd="@dimen/editor_margin"
+        android:layout_marginBottom="@dimen/editor_margin_rotate"
+        android:layout_alignBottom="@+id/validate"
+        android:layout_toLeftOf="@+id/validate"
+        android:layout_toStartOf="@+id/validate" />
+
+    <Button
+        android:onClick="rotateLeft"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:id="@+id/rotate_left"
+        android:alpha="0"
+        android:layout_marginRight="@dimen/editor_margin"
+        android:layout_marginEnd="@dimen/editor_margin"
+        android:layout_marginBottom="@dimen/editor_margin_rotate"
+        android:layout_alignBottom="@+id/validate"
+        android:layout_toLeftOf="@+id/validate"
+        android:layout_toStartOf="@+id/validate" />
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:contentDescription="@string/pic_edit_rotate_right"
+        android:src="@drawable/pic_edit_rotate_clock"
+        android:alpha="0.5"
+        android:layout_marginLeft="@dimen/editor_margin"
+        android:layout_marginStart="@dimen/editor_margin"
+        android:layout_marginBottom="@dimen/editor_margin_rotate"
+        android:layout_alignBottom="@+id/validate"
+        android:layout_toRightOf="@+id/validate"
+        android:layout_toEndOf="@+id/validate"
+        android:id="@+id/imageView2" />
+
+    <Button
+        android:onClick="rotateRight"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:id="@+id/rotate_right"
+        android:layout_marginLeft="@dimen/editor_margin"
+        android:layout_marginStart="@dimen/editor_margin"
+        android:layout_marginBottom="@dimen/editor_margin_rotate"
+        android:layout_alignBottom="@+id/validate"
+        android:layout_toRightOf="@+id/validate"
+        android:layout_toEndOf="@+id/validate"
+        android:alpha="0" />
+
 
 </RelativeLayout>
